# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kamo"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/kamo"
repository = "https://github.com/typedduck/kamo"
description = "A library to assist in the creation of an interpreter or compiler and its associated runtime."
categories = ["parsing", "data-structures", "memory-management"]
keywords = [
    "paser-combinators",
    "parser",
    "parsing",
    "memory-management",
    "garbage-collection",
]
readme = "README.md"
include = ["LICENSE-*", "README.md", "CHANGELOG.md", "Cargo.toml", "/src"]

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
log = { version = "0.4.20", features = [
    "std",
    "release_max_level_info",
    "max_level_trace",
] }
memchr = "2.6.4"
regex = { version = "1.10.2", optional = true }
smallvec = { version = "1.11.2", features = ["union"] }
smartstring = "1.0.1"
unicode-ident = "1.0.12"

[features]
regex = ["dep:regex"]
