# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kamo"
version = "0.9.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/kamo"
repository = "https://github.com/typedduck/kamo"
description = "A library to assist in the creation of an interpreter or compiler and its associated runtime."
categories = [
    "parsing",
    "parser-implementations",
    "data-structures",
    "memory-management",
]
keywords = [
    "paser-combinators",
    "type-checker",
    "memory-management",
    "garbage-collection",
]
readme = "README.md"
include = [
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
    "Cargo.toml",
    "/src",
    "/tests/macros",
    "/tests/sexpr",
    "/tests/types",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
pedantic = "warn"
cargo = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
nursery = "warn"

[dependencies]
kamo-macros = { version = "0.1.0", path = "../kamo-macros", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.20", features = [
    "std",
    "release_max_level_info",
    "max_level_trace",
] }
memchr = "2.6.4"
paste = { version = "1.0.14", optional = true }
regex = { version = "1.10.2", optional = true }
smallvec = { version = "1.11.2", features = ["union"] }
smartstring = "1.0.1"
unicode-ident = "1.0.12"

[dev-dependencies]
kamo-macros = { version = "0.1.0", path = "../kamo-macros" }

[features]
default = []
macros = ["dep:kamo-macros"]
regex = ["dep:regex"]
types = ["dep:lazy_static", "dep:paste"]
